feat(bounded-history): implement bounded history api
