# view/view-service.pb.gw.go
@@ -136,6 +136,60 @@ func request_ReporterService_GetStateHistory_0(ctx context.Context, marshaler ru
 
 }
 
+var (
+	filter_ReporterService_GetBoundedStateHistory_0 = &utilities.DoubleArray{Encoding: map[string]int{"context": 0, "component": 1, "state_id": 2}, Base: []int{1, 1, 1, 2, 0, 0}, Check: []int{0, 1, 2, 2, 3, 4}}
+)
+
+func request_ReporterService_GetBoundedStateHistory_0(ctx context.Context, marshaler runtime.Marshaler, client ReporterServiceClient, req *http.Request, pathParams map[string]string) (ReporterService_GetBoundedStateHistoryClient, runtime.ServerMetadata, error) {
+	var protoReq BoundedStateHistoryRequest
+	var metadata runtime.ServerMetadata
+
+	var (
+		val string
+		ok  bool
+		err error
+		_   = err
+	)
+
+	val, ok = pathParams["context.component"]
+	if !ok {
+		return nil, metadata, grpc.Errorf(codes.InvalidArgument, "missing parameter %s", "context.component")
+	}
+
+	err = runtime.PopulateFieldFromPath(&protoReq, "context.component", val)
+
+	if err != nil {
+		return nil, metadata, err
+	}
+
+	val, ok = pathParams["context.state_id"]
+	if !ok {
+		return nil, metadata, grpc.Errorf(codes.InvalidArgument, "missing parameter %s", "context.state_id")
+	}
+
+	err = runtime.PopulateFieldFromPath(&protoReq, "context.state_id", val)
+
+	if err != nil {
+		return nil, metadata, err
+	}
+
+	if err := runtime.PopulateQueryParameters(&protoReq, req.URL.Query(), filter_ReporterService_GetBoundedStateHistory_0); err != nil {
+		return nil, metadata, grpc.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	stream, err := client.GetBoundedStateHistory(ctx, &protoReq)
+	if err != nil {
+		return nil, metadata, err
+	}
+	header, err := stream.Header()
+	if err != nil {
+		return nil, metadata, err
+	}
+	metadata.HeaderMD = header
+	return stream, metadata, nil
+
+}
+
 // RegisterReporterServiceHandlerFromEndpoint is same as RegisterReporterServiceHandler but
 // automatically dials to "endpoint" and closes the connection when "ctx" gets done.
 func RegisterReporterServiceHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
@@ -250,6 +304,34 @@ func RegisterReporterServiceHandler(ctx context.Context, mux *runtime.ServeMux, 
 
 	})
 
+	mux.Handle("GET", pattern_ReporterService_GetBoundedStateHistory_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(ctx)
+		defer cancel()
+		if cn, ok := w.(http.CloseNotifier); ok {
+			go func(done <-chan struct{}, closed <-chan bool) {
+				select {
+				case <-done:
+				case <-closed:
+					cancel()
+				}
+			}(ctx.Done(), cn.CloseNotify())
+		}
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, req)
+		if err != nil {
+			runtime.HTTPError(ctx, outboundMarshaler, w, req, err)
+		}
+		resp, md, err := request_ReporterService_GetBoundedStateHistory_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_ReporterService_GetBoundedStateHistory_0(ctx, outboundMarshaler, w, req, func() (proto.Message, error) { return resp.Recv() }, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -259,6 +341,8 @@ var (
 	pattern_ReporterService_GetState_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 1, 0, 4, 1, 5, 3}, []string{"v1", "view", "context.component", "context.state_id"}, ""))
 
 	pattern_ReporterService_GetStateHistory_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 1, 0, 4, 1, 5, 3, 2, 4}, []string{"v1", "view", "context.component", "context.state_id", "history"}, ""))
+
+	pattern_ReporterService_GetBoundedStateHistory_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 1, 0, 4, 1, 5, 3, 2, 4}, []string{"v1", "view", "context.component", "context.state_id", "boundedhistory"}, ""))
 )
 
 var (
@@ -267,4 +351,6 @@ var (
 	forward_ReporterService_GetState_0 = runtime.ForwardResponseMessage
 
 	forward_ReporterService_GetStateHistory_0 = runtime.ForwardResponseStream
+
+	forward_ReporterService_GetBoundedStateHistory_0 = runtime.ForwardResponseStream
 )
